# trust-region-layers

./: .gitignore  3rd-party-licenses.txt  README.md  main.py  requirements.txt
configs/pg/: alr_reacher_config.json  alr_reacher_ppo_config.json  mujoco_config.json  mujoco_papi_config.json  mujoco_ppo_config.json
cpp_projection/: CMakeLists.txt  README.md  setup.py
cpp_projection/include/: NlOptUtil.h  PyArmaConverter.h
cpp_projection/include/projection/: BatchedDiagCovOnlyProjection.h  DiagCovOnlyKLProjection.h
cpp_projection/src/projection/: BatchedDiagCovOnlyProjection.cpp  DiagCovOnlyKLProjection.cpp  PyProjection.cpp
trust_region_projections/algorithms/: abstract_algo.py
trust_region_projections/algorithms/pg/: pg.py
trust_region_projections/models/policy/: abstract_gaussian_policy.py  gaussian_policy_diag.py  gaussian_policy_full.py  gaussian_policy_sqrt.py  policy_factory.py
trust_region_projections/models/value/: vf_net.py
trust_region_projections/projections/: base_projection_layer.py  frob_projection_layer.py  kl_projection_layer.py  papi_projection.py  projection_factory.py  w2_projection_layer.py
trust_region_projections/trajectories/: dataclass.py  normalized_env_wrapper.py  trajectory_sampler.py  vector_env.py
trust_region_projections/utils/: __init__.py  custom_store.py  network_utils.py  projection_utils.py  torch_utils.py
utils/: get_agent.py
